# libpcbm

./: .gitignore  CMakeLists.txt  LICENSE.gpl3  README.md  pcbmotor.pc.in
include/: boost_serial.h  pcbmotor.h
src/: boost_serial.cpp  help_out.txt  liblibpcbmotor.so.0  liblibpcbmotor.so.0.1  move_success_out.txt  move_timeout_out.txt  pcbm.cpp  pcbm.h  pcbm_comm.cpp  pcbmotor.pc  vec.opt
